# rime-moran

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README-en.md  README.md  default.yaml  make_simp_dist.sh  moran.chars.dict.yaml  moran.computer.dict.yaml  moran.hanyu.dict.yaml  moran.schema.yaml  moran.words.dict.yaml  moran.yaml  moran_TSPhrases.txt  moran_aux.schema.yaml  moran_charset.dict.yaml  moran_charset_comment_filter.lua  moran_custom_phrases.txt  moran_defs.yaml  moran_english.dict.yaml  moran_fixed.dict.yaml  moran_fixed.schema.yaml  moran_fixed.symbols.dict.yaml  moran_fixed_simp.dict.yaml  moran_reverse.schema.yaml  moran_sentence.schema.yaml  moran_zrmdb.dict.yaml  moran_zrmdb.schema.yaml  pyproject.toml  symbols.yaml  tiger.dict.yaml  zrlf.dict.yaml
.github/workflows/: main.yml  test.yml
custom/: CMakeLists.txt
data/: CMakeLists.txt
data/chars/: CMakeLists.txt  gen_chaifen_filter.py  gen_chars.py  gen_zrmdb.py  pinyin.txt  utils.py
data/dicts/: CMakeLists.txt  moran.moe.dict.yaml
data/grammar/: CMakeLists.txt
lua/: CMakeLists.txt  moran.lua  moran_aux_translator.lua  moran_charset_filter.lua  moran_disable_phrase_memory.lua  moran_english_filter.lua  moran_express_translator.lua  moran_fix_filter.lua  moran_hint_filter.lua  moran_ijrq_filter.lua  moran_number.lua  moran_pin.lua  moran_processor.lua  moran_processor.lua.in  moran_reorder_filter.lua  moran_shijian.lua  zrmdb.txt
moran/: CMakeLists.txt  moran.schema.yaml.in  moran.words.dict.yaml  moran.yaml.in  moran_aux.schema.yaml.in  moran_fixed.schema.yaml.in  moran_fixed_simp.dict.yaml  moran_sentence.schema.yaml.in
opencc/: .gitignore  CMakeLists.txt  Makefile  moran_TSCharacters.ocd2  moran_TSCharacters.txt  moran_TSPhrases.txt  moran_chaifen.ocd2  moran_chaifen.txt  moran_emoji.ocd2  moran_emoji.txt  moran_pinyinhint.txt  moran_s2dzing.json  moran_t2s_fix.txt
plum/: CMakeLists.txt
tests/: moran.charset.test.yaml  moran.hint.test.yaml  moran.test.yaml  moran_aux.test.yaml  simp_moran.test.yaml
tools/: Makefile  check_simp_table.py  dazhu.py  fileutils.py  flypyify.py  gen_chaifen_filter.py  gen_chars.py  gen_mdx.py  gen_zrlf.py  gen_zrmdb.py  llm_tradify.py  rime_dict.py  schemagen.py  sync_essay.py  sync_moe.py  sync_moe.sh  update_compact_dicts.sh  update_opencc.sh  utils.py  zrmify.py
tools/data/: chars.dict.yaml  chars.txt  moran_chai.txt  zrlf.txt
tools/data/opencc/: moran_chaifen.txt
tools/mdict/: main.css
