[project]
name = "moran"
version = "0.1.0"
description = ""
authors = [
    {name = "ksqsf", email = "i@ksqsf.moe"},
]
dependencies = [
    "OpenCC",
    "pypinyin",
    "regex",
    "pandas",
    "python-dotenv",
    "requests",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPLv3"}

[tool.pdm]
distribution = false
